app-2-dep.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2-deployment
spec:
  selector:
    matchLabels:
      app: app-2
  replicas: 1
  template:
    metadata:
      labels:
        app: app-2
    spec:
      containers:
      # New Image
      - name: app-2
        image: ghcr.io/denoslab/ensf400-sample-app:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
