app-1-ingress.yaml
#App1 Ingress, the main backend service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-1-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-1-service
            port:
              number: 3000
