app-2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-2-ingress
spec:
  rules:
  - host: minikube.local
    http:
      paths:
      - pathType: Prefix
        path: "/app2"
        backend:
          service:
            name: app-2-service
            port:
              number: 3000
